CSS fixed. User menu rendered behind audio nav.

--- a/soniferous/music_player/static/soniferous/style/soniferous.css
+++ b/soniferous/music_player/static/soniferous/style/soniferous.css
@@ -57,7 +57,7 @@ ul {
   height: 40px;
   position: fixed;
   width: 100%;
-  z-index: 1;
+  z-index: 2;
 }
 #menu-bar > h1 {
   font: 30px/34px "Lobster";
